--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DirectAgents.Domain.Entities.AB.ABClient
 
 <fieldset>
-    <legend>Edit ABClient</legend>
+    <legend>Edit Client</legend>
     @using (Html.BeginForm())
     {
         @Html.ValidationSummary()
