--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
@@ -19,6 +19,9 @@ IntCredit: @Model.IntCredit<br />
     </tr>
 }
 </table>
+<br />
+
+@Html.ActionLink("List Campaigns", "Index", "Campaigns", new { clientId = Model.Id }, null)
 
 <br /><br />
 
