--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.AB.ABClient>
 
-<h2>AB Clients</h2>
+<h2>Clients</h2>
 
 <table>
 @foreach (var client in Model.OrderBy(c => c.Name))
