--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Shared/_LayoutAB.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Shared/_LayoutAB.cshtml
@@ -56,6 +56,7 @@ table th,td {
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("Index", "Dashboard")">Dashboard</a></li>
                     <li><a href="@Url.Action("Index", "Clients")">Clients</a></li>
+                    <li><a href="@Url.Action("Index", "Vendors")">Vendors</a></li>
                 </ul>
             </li>
         </ul>
