--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/PlatColMappings/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/PlatColMappings/Edit.cshtml
@@ -35,6 +35,14 @@
                     <td>@Html.EditorFor(m => m.PostViewConv)</td>
                 </tr>
                 <tr>
+                    <td>@Html.LabelFor(m => m.PostClickRev)</td>
+                    <td>@Html.EditorFor(m => m.PostClickRev)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.PostViewRev)</td>
+                    <td>@Html.EditorFor(m => m.PostViewRev)</td>
+                </tr>
+                <tr>
                     <td>@Html.LabelFor(m => m.StrategyName)</td>
                     <td>@Html.EditorFor(m => m.StrategyName)</td>
                 </tr>
