--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Edit.cshtml
@@ -35,7 +35,7 @@
         <table style="margin-bottom:5px">
             <tr>
                 <th>Amount</th>
-                <th>Job</th>
+                <th>Account</th>
             </tr>
         @{
             int i = 0;
