--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
@@ -10,8 +10,8 @@ Client: @Model.Name
         <th></th>
         <th>Date</th>
         <th>Total Received</th>
-        <th>General amount</th>
-        <th>Jobs value</th>
+        <th>General Spend</th>
+        <th>other accounts</th>
     </tr>
 @foreach (var payment in Model.ClientPayments.OrderBy(x => x.Date))
 {
