--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
@@ -12,7 +12,7 @@ Client:
     int numJobs = monthGroup.JobGroups.Count();
     <tr>
         <th>@monthGroup.Month.ToString("MMM yyyy")</th>
-        <th>Price</th>
+        <th>Quantity/Price</th>
         <th>General Spend</th>
         @foreach (var jg in monthGroup.JobGroups)
         {
@@ -59,8 +59,8 @@ Client:
     <tr>
         <th>Date</th>
         <th>Total Received</th>
-        <th>General amount</th>
-        <th>Jobs amount</th>
+        <th>General Spend</th>
+        <th>other accounts</th>
     </tr>
 @foreach (var payment in Model.ABClient.ClientPayments.OrderBy(x => x.Date))
 {
