--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -14,6 +14,7 @@
     <th colspan="2">Daily</th>
     <th colspan="2">Strategy</th>
     <th colspan="2">Creative</th>
+    <th colspan="2">AdSet</th>
     <th colspan="2">Site</th>
     <th colspan="2">Conv</th>
 </tr>
@@ -31,19 +32,23 @@
     <th>Latest</th>
     <th>Earliest</th>
     <th>Latest</th>
+    <th>Earliest</th>
+    <th>Latest</th>
 </tr>
 @foreach (var pGauge in Model.StatsGauges)
 {
 if (!Model.CampaignId.HasValue) // don't show Partner summaries if filtering by campaign
 {
     <tr style="font-weight:bold;background-color:aquamarine">
-        <td colspan="3">@pGauge.Platform.Name - Summary for all Ext Accounts:</td>
+        <td colspan="3">@pGauge.Platform.Name - Summary:</td>
         <td style="text-align:right">@pGauge.Daily.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Daily.LatestDisp</td>
         <td style="text-align:right">@pGauge.Strategy.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Strategy.LatestDisp</td>
         <td style="text-align:right">@pGauge.Creative.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Creative.LatestDisp</td>
+        <td style="text-align:right">@pGauge.AdSet.EarliestDisp</td>
+        <td style="text-align:right">@pGauge.AdSet.LatestDisp</td>
         <td style="text-align:right">@pGauge.Site.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Site.LatestDisp</td>
         <td style="text-align:right">@pGauge.Conv.EarliestDisp</td>
@@ -64,6 +69,8 @@ if (pGauge.Children != null)
         <td style="text-align:right">@gauge.Strategy.LatestDisp</td>
         <td style="text-align:right">@gauge.Creative.EarliestDisp</td>
         <td style="text-align:right">@gauge.Creative.LatestDisp</td>
+        <td style="text-align:right">@gauge.AdSet.EarliestDisp</td>
+        <td style="text-align:right">@gauge.AdSet.LatestDisp</td>
         <td style="text-align:right">@gauge.Site.EarliestDisp</td>
         <td style="text-align:right">@gauge.Site.LatestDisp</td>
         <td style="text-align:right">@gauge.Conv.EarliestDisp</td>
