--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Creative.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Creative.cshtml
@@ -1,5 +1,4 @@
-﻿@using DirectAgents.Domain.Entities.CPProg
-@model DirectAgents.Web.Areas.ProgAdmin.Models.TDStatsVM
+﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.TDStatsVM
 
 @section scripts {
 <script>
