--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
@@ -13,6 +13,7 @@
     <th style="text-align:right">ID</th>
     <th>Ext Account</th>
     <th>External Id</th>
+    <th>Network</th>
     <th>Stats</th>
     <th>List...</th>
     <th>Creative URL Format</th>
@@ -25,6 +26,7 @@
     <td style="text-align:right">@extAcct.Id</td>
     <td>@extAcct.Name</td>
     <td>@extAcct.ExternalId</td>
+    <td>@(extAcct.Network != null ? extAcct.Network.Name : "")</td>
     <td>@Html.ActionLink("Upload", "UploadStats", new { id = extAcct.Id })</td>
     <td>
         @Html.ActionLink("Strategies", "Strategies", new { id = extAcct.Id }, null) |
