--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Show.cshtml
@@ -10,8 +10,8 @@
 <table>
 <tr>
     <td>
-        Advertiser: <b>@Model.Advertiser.Name</b><br />
-        Campaign: <b>@Model.Name</b>
+        Advertiser: <b>@Model.Advertiser.Name</b> (@Model.AdvertiserId)<br />
+        Campaign: <b>@Model.Name</b> (@Model.Id)
     </td>
     <td style="text-align:center">
         SalesRep: <b>@Model.Advertiser.SalesRepName()</b><br />
