--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
@@ -27,6 +27,10 @@
                     <td>@Html.EditorFor(m => m.Impressions)</td>
                 </tr>
                 <tr>
+                    <td>@Html.LabelFor(m => m.AllClicks)</td>
+                    <td>@Html.EditorFor(m => m.AllClicks)</td>
+                </tr>
+                <tr>
                     <td>@Html.LabelFor(m => m.Clicks)</td>
                     <td>@Html.EditorFor(m => m.Clicks)</td>
                 </tr>
