--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Index.cshtml
@@ -37,6 +37,7 @@
     <th></th>
     <th>Date</th>
     <th>Impressions</th>
+    <th>AllClicks</th>
     <th>Clicks</th>
     <th>PostClick Conv</th>
     <th>PostClick Rev</th>
@@ -54,6 +55,7 @@
     </td>
     <td>@ds.Date.ToShortDateString()</td>
     <td style="text-align:right">@ds.Impressions</td>
+    <td style="text-align:right">@ds.AllClicks</td>
     <td style="text-align:right">@ds.Clicks</td>
     <td style="text-align:right">@ds.PostClickConv</td>
     <td style="text-align:right">@ds.PostClickRev</td>
