--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/AdSet.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/AdSet.cshtml
@@ -25,6 +25,7 @@
     <th style="text-align:right">ID</th>
     <th>AdSet</th>
     <th>Impressions</th>
+    <th>AllClicks</th>
     <th>Clicks</th>
     <th>CTR</th>
     <th>CPM</th>
@@ -44,6 +45,7 @@
     <td style="text-align:right">@stat.AdSet.Id</td>
     <td>@stat.AdSet.Name</td>
     <td style="text-align:right">@stat.Impressions</td>
+    <td style="text-align:right">@stat.AllClicks</td>
     <td style="text-align:right">@stat.Clicks</td>
     <td style="text-align:center">@stat.CTR</td>
     <td style="text-align:center">@stat.CPM</td>
@@ -65,6 +67,7 @@
     <th></th>
     <th>@tot.Name</th>
     <th style="text-align:right">@tot.Impressions</th>
+    <th style="text-align:right">@tot.AllClicks</th>
     <th style="text-align:right">@tot.Clicks</th>
     <th style="text-align:center">@tot.CTR</th>
     <th style="text-align:center">@tot.CPM</th>
