--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/ExtAccount.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/ExtAccount.cshtml
@@ -23,6 +23,7 @@
     <th style="text-align:right">ID</th>
     <th>Ext Account</th>
     <th>Impressions</th>
+    <th>AllClicks</th>
     <th>Clicks</th>
     <th>CTR</th>
     <th>CPM</th>
@@ -46,6 +47,7 @@
     <td style="text-align:right">@stat.ExtAccount.Id</td>
     <td>@stat.ExtAccount.Name</td>
     <td style="text-align:right">@stat.Impressions</td>
+    <td style="text-align:right">@stat.AllClicks</td>
     <td style="text-align:right">@stat.Clicks</td>
     <td style="text-align:center">@stat.CTR</td>
     <td style="text-align:center">@stat.CPM</td>
@@ -68,6 +70,7 @@
     <th></th>
     <th>@tot.Name</th>
     <th style="text-align:right">@tot.Impressions</th>
+    <th style="text-align:right">@tot.AllClicks</th>
     <th style="text-align:right">@tot.Clicks</th>
     <th style="text-align:center">@tot.CTR</th>
     <th style="text-align:center">@tot.CPM</th>
