--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
@@ -22,6 +22,7 @@
     <th style="text-align:right">ID</th>
     <th>Strategy</th>
     <th>Impressions</th>
+    <th>AllClicks</th>
     <th>Clicks</th>
     <th>CTR</th>
     <th>CPM</th>
@@ -45,6 +46,7 @@
     <td style="text-align:right">@stat.Strategy.Id</td>
     <td>@stat.Strategy.Name</td>
     <td style="text-align:right">@stat.Impressions</td>
+    <td style="text-align:right">@stat.AllClicks</td>
     <td style="text-align:right">@stat.Clicks</td>
     <td style="text-align:center">@stat.CTR</td>
     <td style="text-align:center">@stat.CPM</td>
@@ -64,8 +66,10 @@
 <tr>
     <th></th>
     <th></th>
+    <th></th>
     <th>@tot.Name</th>
     <th style="text-align:right">@tot.Impressions</th>
+    <th style="text-align:right">@tot.AllClicks</th>
     <th style="text-align:right">@tot.Clicks</th>
     <th style="text-align:center">@tot.CTR</th>
     <th style="text-align:center">@tot.CPM</th>
