--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -15,13 +15,16 @@
     <th colspan="2">Strategy</th>
     <th colspan="2">Creative</th>
     <th colspan="2">AdSet</th>
+    <th colspan="2">Actions</th>
     <th colspan="2">Site</th>
     <th colspan="2">Conv</th>
 </tr>
 <tr>
     <th>Partner</th>
     <th style="text-align:right">ID</th>
-    <th>Ext Account</th>
+    <th>External&nbsp;Account&nbsp;&nbsp;&nbsp;</th>
+    <th>Earliest</th>
+    <th>Latest</th>
     <th>Earliest</th>
     <th>Latest</th>
     <th>Earliest</th>
@@ -40,7 +43,7 @@
 if (!Model.CampaignId.HasValue) // don't show Partner summaries if filtering by campaign
 {
     <tr style="font-weight:bold;background-color:aquamarine">
-        <td colspan="3">@pGauge.Platform.Name - Summary:</td>
+        <td colspan="3">@pGauge.Platform.Name.Replace(' ', '_')&nbsp;-&nbsp;Summary:</td>
         <td style="text-align:right">@pGauge.Daily.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Daily.LatestDisp</td>
         <td style="text-align:right">@pGauge.Strategy.EarliestDisp</td>
@@ -49,6 +52,8 @@ if (!Model.CampaignId.HasValue) // don't show Partner summaries if filtering by 
         <td style="text-align:right">@pGauge.Creative.LatestDisp</td>
         <td style="text-align:right">@pGauge.AdSet.EarliestDisp</td>
         <td style="text-align:right">@pGauge.AdSet.LatestDisp</td>
+        <td style="text-align:right">@pGauge.Action.EarliestDisp</td>
+        <td style="text-align:right">@pGauge.Action.LatestDisp</td>
         <td style="text-align:right">@pGauge.Site.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Site.LatestDisp</td>
         <td style="text-align:right">@pGauge.Conv.EarliestDisp</td>
@@ -71,6 +76,8 @@ if (pGauge.Children != null)
         <td style="text-align:right">@gauge.Creative.LatestDisp</td>
         <td style="text-align:right">@gauge.AdSet.EarliestDisp</td>
         <td style="text-align:right">@gauge.AdSet.LatestDisp</td>
+        <td style="text-align:right">@gauge.Action.EarliestDisp</td>
+        <td style="text-align:right">@gauge.Action.LatestDisp</td>
         <td style="text-align:right">@gauge.Site.EarliestDisp</td>
         <td style="text-align:right">@gauge.Site.LatestDisp</td>
         <td style="text-align:right">@gauge.Conv.EarliestDisp</td>
