use adsetactions for action stats

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Action.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Action.cshtml
@@ -17,7 +17,11 @@
 
 @if (Model.StratId.HasValue)
 {
-    <text>StrategyId: @(Model.StratId.Value)</text>
+    <text>StrategyId: @(Model.StratId.Value)</text><br />
+}
+@if (Model.AdSetId.HasValue)
+{
+    <text>AdSetId: @(Model.AdSetId.Value)</text><br />
 }
 <table>
 <tr>
