--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/AdSet.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/AdSet.cshtml
@@ -21,6 +21,7 @@
 }
 <table>
 <tr>
+    <th>Stats By</th>
     <th>Ext Account</th>
     <th style="text-align:right">ID</th>
     <th>AdSet</th>
@@ -41,6 +42,9 @@
 @foreach (var stat in Model.Stats)
 {
 <tr>
+    <td>
+        @Html.ActionLink("action", "Action", new { acctId = Model.AccountId, adsetId = stat.AdSet.Id, month = Model.MonthString })
+    </td>
     <td>(@stat.AdSet.ExtAccount.Platform.Name) @stat.AdSet.ExtAccount.Name</td>
     <td style="text-align:right">@stat.AdSet.Id</td>
     <td>@stat.AdSet.Name</td>
@@ -63,6 +67,7 @@
 {
     var tot = Model.StatsTotal;
 <tr>
+    <th></th>
     <th></th>
     <th></th>
     <th>@tot.Name</th>
